# math-notebook

./: .gitignore  Cargo.toml  README.md
artworks/: Cargo.toml  README.md
artworks/examples/: crinkle_arc.rs  grid.rs  mirror_tiling.rs  mobius_sierpinski.rs  nacho.rs  permutation_arcs.rs  three_lenses.rs  tricorn.rs
artworks/examples/balanced_brackets/: brackets.rs  main.rs
artworks/examples/halloween2024/: artworks.rs
artworks/src/: lib.rs
artworks/src/motifs/: halloween.rs  mod.rs
mobius/: Cargo.toml  README.md
mobius/examples/: balanced_brackets.rs  candy_corn.rs  crinkle_arc.rs  gasket.rs  ghost_tour.rs  grid.rs  halloween.rs  mirror_tiling.rs  mobius_sierpinski.rs  mobius_sierpinski_take2.rs  nacho.rs  permutation_arcs.rs  recaman_seq.rs  three_lenses.rs  tricorn.rs  unknown.rs
mobius/examples/balanced_brackets/: brackets.rs  main.rs
mobius/examples/halloween2024/: artworks.rs  main.rs
mobius/src/: address.rs  cline.rs  cline_arc.rs  cline_tile.rs  complex.rs  complex_error.rs  float_error.rs  geometry.rs  grid_ifs.rs  hyperbolic_tilings.rs  integer_arcs.rs  interpolation.rs  isogonal.rs  isogonal_primitive.rs  isogonal_recipes.rs  iterated_function_system.rs  lib.rs  mobius.rs  nearly.rs  orthogonal_arcs.rs  path_element.rs  polygon.rs  quantize.rs  quantized_hash.rs  recipes.rs  style.rs  svg_plot.rs  unit_complex.rs
mobius/src/algorithms/: grid_ifs.rs  group_ifs.rs  mod.rs  monoid_ifs.rs  orbit_ifs.rs  orbit_tile.rs  point_set.rs  semigroup_ifs.rs
mobius/src/geometry/: arc_angles.rs  circle.rs  circular_arc.rs  double_ray.rs  integer_arcs.rs  (+6 more)
(+75 files in other folders)
