[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
abstraction = { path = "../abstraction" }
mobius = { path = "../mobius" }
rendering = { path = "../rendering" }
permutations = { path = "../permutations" }
thiserror = "2.0.3"
clap = { version = "4.5.20", features = ["derive"] }
