[package]
name = "mobius"
version = "0.1.0"
edition = "2021"

[dependencies]
abstraction = { path = "../abstraction" }
rendering = { path = "../rendering" }
svg = "0.18.0"
thiserror = "2.0.3"
derive_more = { version = "1.0.0", features = ["display"] }

[dev-dependencies]
permutations = { path = "../permutations" }
clap = { version = "4.5.20", features = ["derive"] }
test-case = "3.3.1"
pretty_assertions = "1.4.1"

[features]
debug_cline_arcs = []
